CMake+doxygen documentation update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ endif()
 
 option(TINY_CORE "Build tiny_core library" ON)
 option(TINY_TEST "Build tiny engine test executable" ON)
+option(TINY_DOCS "Build tiny engine documentation" ON)
 
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
     set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/../install CACHE PATH "default install path" FORCE)
@@ -48,4 +49,7 @@ if(TINY_CORE)
 endif()
 if(TINY_TEST)
     add_subdirectory(test)
+endif()
+if(TINY_DOCS)
+    add_subdirectory(docs)
 endif()
