updated and tested CMake install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-include(ExternalProject)
+include(CMakeDependentOption)
 enable_testing()
 
 project(tiny)
@@ -11,16 +11,15 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
 endif()
 
-option(TINY_DOCS "Build tiny engine documentation"   ON)
-option(TINY_TEST "Build tiny engine test executable" ON)
-option(TINY_CORE "Build tiny core package"           ON)
-option(TINY_GFX  "Build tiny graphics package"       ON)
+option(TINY_DOCS "Build tiny engine documentation" ON)
+option(TINY_CORE "Build tiny core package"         ON)
+option(TINY_GFX  "Build tiny graphics package"     ON)
+option(TINY_SFML "Build tiny sfml bindings"        OFF)
+CMAKE_DEPENDENT_OPTION(TINY_TEST "Build tiny engine test executable" ON  "TINY_CORE" OFF)
 
 include_directories(include)
 
 add_subdirectory(src)
-
-include_directories(${RIKU_SOURCE_DIR}/include)
 
 if(TINY_TEST)
     add_subdirectory(test)
