--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,10 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     set_target_properties(tiny_test PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE")
     set_target_properties(tiny_test PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/test/game")
     set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT tiny_test)
-endif()
+endif() 
 
-add_test(NAME tiny_launchtest COMMAND tiny_test WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/game)
+set_target_properties(tiny_test PROPERTIES
+    FOLDER tiny
+)
+
+add_test(NAME tiny_launchtest COMMAND tiny_test WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/test/game)
