split tiny::null_system because RIKU doesn't play nice with multiple inheritance

--- a/src/tiny/CMakeLists.txt
+++ b/src/tiny/CMakeLists.txt
@@ -18,8 +18,8 @@ include_directories(${RIKU_SOURCE_DIR}/include/)
 include_directories(${TINY_SOURCE_DIR}/include/)
 
 file(GLOB_RECURSE TINY_src *.cpp)
-file(GLOB_RECURSE TINY_h ${TINY_SOURCE_DIR}/include/tiny.h)
-file(GLOB_RECURSE TINY_hdrs ${TINY_SOURCE_DIR}/include/tiny/*.h*)
+file(GLOB_RECURSE TINY_h ${tiny_SOURCE_DIR}/include/tiny.h)
+file(GLOB_RECURSE TINY_hdrs ${tiny_SOURCE_DIR}/include/tiny/*.h*)
 
 add_library(tiny STATIC ${TINY_src} ${TINY_h} ${TINY_hdrs})
 set_target_properties(tiny PROPERTIES
