files in place for the editor+inspector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,15 @@ enable_testing()
 project(tiny)
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-    SET(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS_DEBUG} /MTd")
-    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
-    SET(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE} /MT")
-    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+  SET(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS_DEBUG} /MTd")
+  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+  SET(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE} /MT")
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
 endif()
 
-option(TINY_DOCS "Build tiny engine documentation" ON)
-option(TINY_CORE "Build tiny core package"         ON)
+option(TINY_DOCS   "Build tiny engine documentation" ON)
+option(TINY_CORE   "Build tiny core package"         ON)
+option(TINY_EDITOR "Build tiny editor and inspector" ON)
 CMAKE_DEPENDENT_OPTION(TINY_TEST "Build tiny engine test executable" ON  "TINY_CORE" OFF)
 
 include_directories(include)
@@ -20,9 +21,9 @@ include_directories(include)
 add_subdirectory(src)
 
 if(TINY_TEST)
-    add_subdirectory(test)
+  add_subdirectory(test)
 endif()
 
 if(TINY_DOCS)
-    add_subdirectory(docs)
+  add_subdirectory(docs)
 endif()
