--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,13 @@ add_subdirectory(tiny)
 include_directories(${RIKU_SOURCE_DIR}/include)
 
 if(TINY_CORE)
-    add_subdirectory(core)
+  add_subdirectory(core)
 endif()
 
 if(TINY_GFX)
-    add_subdirectory(gfx)
+  add_subdirectory(gfx)
+endif()
+
+if(TINY_EDITOR)
+  add_subdirectory(editor)
 endif()
