minor tweaks to start on first prototype

--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -25,7 +25,7 @@ set_target_properties(tiny-editor PROPERTIES
 )
 
 target_link_libraries(tiny-editor tiny)
-target_link_libraries(tiny-editor AntTweakBarStatic)
+target_link_libraries(tiny-editor AntTweakBar)
 
 install(
   DIRECTORY ${PROJECT_SOURCE_DIR}/include/tiny/editor
