--- a/src/core/CMakeLists.txt.in
+++ b/src/core/CMakeLists.txt.in
@@ -6,7 +6,17 @@ project(tiny_core-reqs NONE)
 ExternalProject_Add(ttvfs
     GIT_REPOSITORY    https://github.com/fgenesis/ttvfs.git
     GIT_TAG           master
-    SOURCE_DIR        "${TINY_SOURCE_DIR}/../ext/ttvfs"
+    SOURCE_DIR        "${tiny_SOURCE_DIR}/../ext/ttvfs"
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND     ""
+    INSTALL_COMMAND   ""
+    TEST_COMMAND      ""
+)
+
+ExternalProject_Add(glm
+    GIT_REPOSITORY    https://github.com/g-truc/glm.git
+    GIT_TAG           master
+    SOURCE_DIR        "${tiny_SOURCE_DIR}/../ext/glm"
     CONFIGURE_COMMAND ""
     BUILD_COMMAND     ""
     INSTALL_COMMAND   ""
